@@ -7,6 +7,7 @@ RCPP_MODULE(acmacs_titers)
     class_<Titers>("acmacs.Titers")
             .method("all", &Titers::all)
             .method("titer", &Titers::titer)
+            .method("titer_of_layer", &Titers::titer_of_layer)
             .method("set_titer", &Titers::set_titer)
             .method("set_dontcare_for_antigen", &Titers::set_dontcare_for_antigen)
             .method("set_dontcare_for_serum", &Titers::set_dontcare_for_serum)
