@@ -13,6 +13,7 @@ class Titers : public wrapper<acmacs::chart::TitersModify>
  public:
     Titers(acmacs::chart::TitersModifyP titers) : wrapper(titers) {}
     std::string titer(size_t ag_no, size_t sr_no) const { return obj_->titer(ag_no - 1, sr_no - 1); }
+    std::string titer_of_layer(size_t layer_no, size_t ag_no, size_t sr_no) const { return obj_->titer_of_layer(layer_no - 1, ag_no - 1, sr_no - 1); }
     void set_titer(size_t ag_no, size_t sr_no, std::string titer) { obj_->titer(ag_no - 1, sr_no - 1, titer); }
     void set_dontcare_for_antigen(size_t ag_no) { obj_->dontcare_for_antigen(ag_no - 1); }
     void set_dontcare_for_serum(size_t sr_no) { obj_->dontcare_for_serum(sr_no - 1); }
